main/default/objects/Binding_Authority_Agreement__c/Binding_Authority_Agreement__c.object-meta.xml
<CustomObject>
    <label>Binding Authority Agreement</label>
    <nameField>
        <label>Binding Authority Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Binding Authority Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>