main/default/objects/Binding_Authority_Agreement__c/fields/Binder_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Binder_Reference_Number__c</fullName>
    <label>Binder Reference Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>