main/default/objects/Binding_Authority_Agreement__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <label>Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>