main/default/objects/Binding_Authority_Agreement__c/fields/Master_Binder__c.field-meta.xml
<CustomField>
    <fullName>Master_Binder__c</fullName>
    <label>Master Binder</label>
    <referenceTo>Master_Binder__c</referenceTo>
    <relationshipLabel>Binding Authority Agreements</relationshipLabel>
    <relationshipName>Binding_Authority_Agreements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>